Small fix social sharing buttons behind menu-div

--- a/app/assets/stylesheets/pages/events.scss
+++ b/app/assets/stylesheets/pages/events.scss
@@ -116,7 +116,7 @@
 .social-events {
   position: fixed;
   bottom: 40px;
-  left: 20px;
+  left: 40px;
 }
 
 @media screen and (max-width: 480px) {
