--- a/app/assets/stylesheets/pages/locations.scss
+++ b/app/assets/stylesheets/pages/locations.scss
@@ -43,7 +43,7 @@
 .locations-social {
   position: fixed;
   bottom: 40px;
-  left: 20px;
+  left: 40px;
 }
 
 .locations-buttons {
